fix short button mobile

--- a/public/style/responsive.css
+++ b/public/style/responsive.css
@@ -88,6 +88,8 @@
 
   .short-button {
     width: 50px !important;
+    min-width: 50px;
+    max-width: 50px;
   }
 }
 
